# runway-light-inspection

./: .gitignore  .gitmodules  README.md
camera_processing/: CMakeLists.txt  light_detector_node.py
camera_processing/Prototyping/: Light Position Estimation.ipynb  Light detection prototype.ipynb  objects.csv  update_objects.csv
camera_processing/runway_ImageProc/: CMakeLists.txt  package.xml
camera_processing/runway_ImageProc/launch/: Back_Cam.launch  Both_Cam.launch  Front_Cam.launch
camera_processing/runway_ImageProc/msg/: LightCoordinates.msg  MetersPointsArrays.msg  UtmCoordinates.msg
camera_processing/runway_ImageProc/src/: GPS_PositionEstimator(backup).cpp  GPS_PositionEstimator(backup2).cpp  GPS_PositionEstimator.cpp  GPS_PositionEstimator.h  PositionEstimator.cpp  PositionEstimator.h  PositionEstimator2.cpp  PositionEstimator2.h
camera_processing/ueye_cam/resources/: xs.ini
common/: CMakeLists.txt  package.xml  robot.rviz
common/launch/: display.launch  gnss.launch  localization.launch  perception.launch  raw_data.launch  rtk.launch  state_estimation.launch  tf.launch
common/urdf/: robot.urdf
gy_87/: README.md
light_detector/: CMakeLists.txt  package.xml  setup.py
light_detector/include/light_detector/: util.py
light_detector/src/: publisher_node.py
master_control/: rpiLightingNode.py  stateNode.py  token.txt
master_control/devel/: .catkin  local_setup.sh
master_control/devel/lib/pkgconfig/: ilocator_pythonLib.pc  rpiLightingNode.pc  stateNode.pc
master_control/devel/lib/python3/dist-packages/ilocator_pythonLib/: __init__.py
master_control/devel/share/ilocator_pythonLib/cmake/: ilocator_pythonLibConfig.cmake
master_control/devel/share/rpiLightingNode/cmake/: rpiLightingNodeConfig.cmake
master_control/devel/share/stateNode/cmake/: stateNodeConfig.cmake
master_control/src/autonomous_status_indicator/: CMakeLists.txt  autonomous_status_indicator.py  package.xml
master_control/src/autonomous_status_indicator/launch/: assi.launch
master_control/src/ilocator_pythonLib/: ilocator_pythonLib.py  package.xml  setup.py
master_control/src/ilocator_python_lib/: CMakeLists.txt  package.xml  setup.py
master_control/src/rpiLightingNode/: CMakeLists.txt  package.xml  rpiLightingNode.py
master_control/src/rpi_lighting_node/: CMakeLists.txt  package.xml  rpi_lighting_node.py
master_control/src/stateNode/: CMakeLists.txt  ilocator_pythonLib.py  ilocator_pythonLib_OLD.py  package.xml  stateNode.py
master_control/src/state_node/: CMakeLists.txt  package.xml  state_node.py
master_control/stateNode/: CMakeLists.txt  package.xml
ntrip_ros/launch/: ntrip_ros.launch
ntrip_ros/scripts/: ntripclient.py
odrive_ros/: CMakeLists.txt  freds_config.json
odrive_ros/nodes/: odrive_basic_node.py  odrive_interface.py  odrive_ros.py
path_tracking_controller/: CMakeLists.txt  package.xml
path_tracking_controller/data/: airport_test_small.csv  big_empty_north_parking_spot_complex.csv  big_square_novi_parking.csv  noth_aau_airport_like_path_big_radius.csv  path.csv  rectangle_cantine.csv  rectangle_closer_to_cantine.csv  small_rectangle_cantine.csv  small_rectangle_cantine_2.csv  straight_path_cantine.csv  very_small_rectangle_cantine.csv
path_tracking_controller/src/: controller.py
path_tracking_controller/src/utils/: pure_pursuit.py
robot_localization/: README.md
robot_localization/launch/: dual_ekf_navsat_example_rob7.launch  navsat_transform_template.launch
robot_localization/params/: dual_ekf_navsat_example.yaml  dual_ekf_navsat_rob7.yaml  ekf_template.yaml  navsat_transform_template.yaml
robot_localization/scripts/: fix_logdata_time.py  quaternion_to_euler.py
robot_localization/src/: navsat_transform.cpp
sbg_ros_driver/src/: message_wrapper.cpp
sbg_ros_driver_1/config/example/: ellipse_N_default.yaml
ublox_f9p/ublox_gps/: CMakeLists.txt  package.xml
ublox_f9p/ublox_gps/config/: zed-f9p.yaml
ublox_f9p/ublox_gps/src/: node.cpp
ublox_f9p/ucenter_config/: F9P_ROS_Rover_config.txt  original.txt  test.txt
ueye/: CHANGELOG.rst  CMakeLists.txt  Eclipse_ROS_format.xml  LICENSE  TargetArch.cmake  bitbucket-pipelines.yml  nodelets.xml  package.xml  readme-ids-software-suite-linux-arm-49400_EN.html
ueye/cfg/: mono.cfg  stereo.cfg
ueye/include/ueye/: Camera.h  CameraNode.h  FramerateNode.h  StereoNode.h
ueye/launch/: mono.launch  nodelets.launch  stereo.launch
ueye/src/: Camera.cpp  CameraNode.cpp  FramerateNode.cpp  StereoNode.cpp  camera_node.cpp  camera_nodelet.cpp  framerate_node.cpp  framerate_nodelet.cpp  stereo_node.cpp  stereo_nodelet.cpp
ueye_cam/launch/: xs_bayer_rggb.launch
ueye_cam/resources/: UI307xCP-C_conf.ini
ueye_cam_back/: CMakeLists.txt  package.xml
ueye_cam_back/launch/: 3140_bayer_rggb.launch
ueye_cam_front/: CMakeLists.txt  package.xml
ueye_cam_front/launch/: 3070_bayer_rggb.launch  3140_bayer_rggb.launch
ueye_cam_front/resources/: UI307xCP-C_conf.ini  UI314xCP-C_conf.ini  xs.ini
