<?xml version="1.0"?>
<package>
  <name>ueye</name>
  <version>0.0.10</version>
  <description>
    Driver for IDS Imaging uEye cameras.
  </description>
  <maintainer email="kmhallen@oakland.edu">Kevin Hallenbeck</maintainer>
  <author>Kevin Hallenbeck</author>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ueye</url>
  <url type="repository">https://bitbucket.org/kmhallen/ueye</url>
  <url type="bugtracker">https://bitbucket.org/kmhallen/ueye/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>

   <!-- these build dependencies are only needed for unit testing -->
  <build_depend>roslaunch</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
